[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.3",
  "hatchling>=1.17.1",
]

[project]
name = "tox-gh"
description = "Seamless integration of tox into GitHub Actions."
readme = "README.md"
keywords = [
  "environments",
  "isolated",
  "testing",
  "virtual",
]
license = "MIT"
maintainers = [{ name = "Bernát Gábor", email = "gaborjbernat@gmail.com" }]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries",
  "Topic :: System",
]
dynamic = [
  "version",
]
dependencies = [
  "tox>=4.6",
]
optional-dependencies.test = [
  "covdefaults>=2.3",
  "devpi-process>=0.3",
  "pytest>=7.3.2",
  "pytest-cov>=4.1",
  "pytest-mock>=3.10",
]
urls.Documentation = "https://github.com/tox-dev/tox-gh#tox-gh"
urls.Homepage = "https://github.com/tox-dev/tox-gh"
urls.Source = "https://github.com/tox-dev/tox-gh"
urls.Tracker = "https://github.com/tox-dev/tox-gh/issues"
entry-points.tox = {"tox-gh"="tox_gh.plugin"}

[tool.hatch]
build.hooks.vcs.version-file = "src/tox_gh/version.py"
build.targets.sdist.include = ["/src", "/tests"]
version.source = "vcs"

[tool.black]
line-length = 120

[tool.ruff]
select = ["ALL"]
line-length = 120
target-version = "py37"
isort = {known-first-party = ["platformdirs", "tests"], required-imports = ["from __future__ import annotations"]}
ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "D301",  #  Use `r"""` if any backslashes in a docstring
    "D205",  # 1 blank line required between summary line and description
    "D401",  # First line of docstring should be in imperative mood
    "D203",  # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
    "D212",  # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible
    "S104",  # Possible binding to all interface
]
[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # asserts allowed in tests...
    "FBT",  # don"t care about booleans as positional arguments in tests
    "INP001", # no implicit namespace
    "D",  # don"t care about documentation in tests
    "S603",  # `subprocess` call: check for execution of untrusted input
    "PLR2004",  # Magic value used in comparison, consider replacing with a constant variable
]

[tool.coverage]
html.show_contexts = true
html.skip_covered = false
paths.source = ["src", ".tox/*/lib/*/site-packages", ".tox\\*\\Lib\\site-packages", "**/src", "**\\src"]
paths.other = [".", "*/tox_gh", "*\\tox_gh"]
report.fail_under = 96
run.parallel = true
run.plugins = ["covdefaults"]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
strict = true
