[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.4",
  "hatchling>=1.25",
]

[project]
name = "tox-gh"
description = "Seamless integration of tox into GitHub Actions."
readme = "README.md"
keywords = [
  "environments",
  "isolated",
  "testing",
  "virtual",
]
license = "MIT"
maintainers = [
  { name = "Bernát Gábor", email = "gaborjbernat@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries",
  "Topic :: System",
]
dynamic = [
  "version",
]
dependencies = [
  "tox>=4.18.1",
]
optional-dependencies.testing = [
  "covdefaults>=2.3",
  "devpi-process>=1",
  "diff-cover>=9.2",
  "pytest>=8.3.2",
  "pytest-cov>=5",
  "pytest-mock>=3.14",
]
urls.Documentation = "https://github.com/tox-dev/tox-gh#tox-gh"
urls.Homepage = "https://github.com/tox-dev/tox-gh"
urls.Source = "https://github.com/tox-dev/tox-gh"
urls.Tracker = "https://github.com/tox-dev/tox-gh/issues"
entry-points.tox.tox-gh = "tox_gh.plugin"

[tool.hatch]
build.hooks.vcs.version-file = "src/tox_gh/version.py"
build.targets.sdist.include = [
  "/src",
  "/tests",
]
version.source = "vcs"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py38"
line-length = 120
format.preview = true
format.docstring-code-line-length = 100
format.docstring-code-format = true
lint.select = [
  "ALL",
]
lint.ignore = [
  "ANN101", # Missing type annotation for `self` in method
  "COM812", # Conflict with formatter
  "CPY",    # No copyright statements
  "D203",   # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
  "D205",   # 1 blank line required between summary line and description
  "D212",   # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible
  "D301",   #  Use `r"""` if any backslashes in a docstring
  "D401",   # First line of docstring should be in imperative mood
  "DOC",    # not supported
  "ISC001", # Conflict with formatter
  "S104",   # Possible binding to all interface
]
lint.per-file-ignores."tests/**/*.py" = [
  "D",       # don't care about documentation in tests
  "FBT",     # don't care about booleans as positional arguments in tests
  "INP001",  # no implicit namespace
  "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
  "S101",    # asserts allowed in tests
  "S603",    # `subprocess` call: check for execution of untrusted input
]
lint.isort = { known-first-party = [
  "tox_gh",
  "tests",
], required-imports = [
  "from __future__ import annotations",
] }
lint.preview = true

[tool.codespell]
builtin = "clear,usage,en-GB_to_en-US"
write-changes = true
count = true

[tool.pyproject-fmt]
max_supported_python = "3.13"

[tool.coverage]
html.show_contexts = true
html.skip_covered = false
paths.source = [
  "src",
  ".tox/*/lib/*/site-packages",
  ".tox\\*\\Lib\\site-packages",
  "**/src",
  "**\\src",
]
paths.other = [
  ".",
  "*/tox_gh",
  "*\\tox_gh",
]
report.fail_under = 96
run.parallel = true
run.plugins = [
  "covdefaults",
]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
strict = true
overrides = [
  { module = [
    "virtualenv.*",
  ], ignore_missing_imports = true },
]
