[metadata]
name = tox_gh
description = Seamless integration of tox into GitHub Actions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tox-dev/tox-gh
author = Yusuke Miyazaki
author_email = miyazaki.dev@gmail.com
maintainer = Yusuke Miyazaki
maintainer_email = miyazaki.dev@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Sphinx
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
keywords = virtual, environments, isolated, testing
project_urls =
    Source=https://github.com/tox-dev/tox-gh
    Tracker=https://github.com/tox-dev/tox-gh/issues

[options]
packages = find:
install_requires =
    tox@git+https://github.com/gaborbernat/tox.git@2021
python_requires = >=3.6
include_package_data = True
package_dir =
    =src
zip_safe = True

[options.packages.find]
where = src

[options.entry_points]
tox =
    tox-gh = tox_gh.plugin

[options.extras_require]
test =
    pytest>=6
    pytest-cov>=2.7
    pytest_mock>=3.6.1

[options.package_data]
tox_gh = py.typed

[flake8]
max-line-length = 120
ignore = F401, H301, E203
dictionaries = en_US,python,technical

[coverage:report]
show_missing = True
exclude_lines =
    \#\s*pragma: no cover
    ^\s*raise AssertionError\b
    ^\s*raise NotImplementedError\b
    ^\s*raise$
    ^if __name__ == ['"]__main__['"]:$

[coverage:paths]
source =
    src
    .tox/*/lib/python*/site-packages
    .tox/pypy*/site-packages
    .tox\*\Lib\site-packages\
    */src
    *\src

[coverage:run]
branch = true
parallel = true
dynamic_context = test_function
source =
    ${_COVERAGE_SRC}

[coverage:html]
show_contexts = true
skip_covered = false
skip_empty = true

[mypy]
python_version = 3.6

[mypy-virtualenv.*]
ignore_missing_imports = True
