[metadata]
name = tox_gh
description = Seamless integration of tox into GitHub Actions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tox-dev/tox-gh
author = Bernat Gabor
author_email = gaborjbernatv@gmail.com
maintainer = Bernat Gabor
maintainer_email = gaborjbernat@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Sphinx
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
keywords = virtual, environments, isolated, testing
project_urls =
    Source=https://github.com/tox-dev/tox-gh
    Tracker=https://github.com/tox-dev/tox-gh/issues
    Changelog=https://github.com/tox-dev/tox-gh/blob/main/CHANGELOG.md

[options]
packages = find:
install_requires =
    tox>=4.0.0a10
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = True

[options.packages.find]
where = src

[options.entry_points]
tox =
    tox-gh = tox_gh.plugin

[options.extras_require]
test =
    covdefaults>=2.2
    pytest>=6.2
    pytest-cov>=3
    pytest-mock>=3.6

[options.package_data]
tox_gh = py.typed

[flake8]
max-line-length = 120
ignore = F401, H301, E203
dictionaries = en_US,python,technical
